--- a/css/style.css
+++ b/css/style.css
@@ -434,8 +434,8 @@ margin-left: auto;
 margin-right: auto;
 }
 
-.socials-item:hover,
-.socials-item:focus {
+.socials-link:hover,
+.socials-link:focus {
 color: var(--accent-color);
 }
 
