--- a/css/style.css
+++ b/css/style.css
@@ -626,6 +626,11 @@ flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
     margin-right: 0;
 }
 
+.projects-list:hover, 
+.projects-list:focus {
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .projects-name {
 padding: 20px 24px;
 
