--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ color: var(--accent-color);
 .link-current {
     display: block;
     padding-top: 32px;
-    padding-bottom: 32px;
+    /* padding-bottom: 32px; */
 
     color: currentColor;
     color: var(--accent-color);
@@ -166,6 +166,17 @@ color: var(--accent-color);
     font-size: 14px;
     line-height: 1.14;
     text-decoration: none;
+}
+
+.link-current:after {
+    content: "";
+    display: block;
+    min-width: 48px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: var(--accent-color);
+    margin-top: 28px;
+    background-position: bottom;
 }
 
 /* Авторизація */
@@ -308,22 +319,22 @@ background-color: var(--secondary-background-color-pag);
 }
 
 .icon-antenna::before {
-    background-image: url('../images/antenna.svg');
+    background-image: url('../images/features/antenna.svg');
     border-radius: 4px;
 }
 
 .icon-clock::before {
-    background-image: url('../images/clock.svg');
+    background-image: url('../images/features/clock.svg');
     border-radius: 4px;
 }
 
 .icon-vector::before {
-background-image: url('../images/vector.svg');
+background-image: url('../images/features/vector.svg');
 border-radius: 4px;
 }
 
 .icon-astronaut::before {
-background-image: url('../images/astronaut.svg');
+background-image: url('../images/features/astronaut.svg');
 border-radius: 4px;
 }
 
