--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ gap: 30px;
 flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
-/* .features-list::before {
+.features-list::before {
 content: "";
 height: 120px;
 display: block;
@@ -333,39 +333,40 @@ margin-bottom: 30px;
 background-repeat: no-repeat;
 background-position: center;
 background-size: auto;
+border-radius: 4px;
 background-color: var(--secondary-background-color-pag);
-} */
+}
 
-/* .icon-antenna::before {
-    background-image: url('../images/svg/icons.svg');
-    border-radius: 4px;
+.icon-antenna::before {
+content: "";
+background-image: url('../images/svg/antenna.svg');
 }
 
 .icon-clock::before {
-    background-image: url('../images/features/clock.svg');
-    border-radius: 4px;
+content: "";
+background-image: url('../images/svg/clock.svg');
 }
 
 .icon-vector::before {
-background-image: url('../images/features/vector.svg');
-border-radius: 4px;
+content: "";
+background-image: url('../images/svg/diagram1.svg');
 }
 
 .icon-astronaut::before {
-background-image: url('../images/features/astronaut.svg');
-border-radius: 4px;
-} */
+content: "";
+background-image: url('../images/svg/astronaut.svg');
+}
 
-.box-icon-features {
+/* .box-icon-features {
 background: var(--secondary-background-color-pag);
 border-radius: 4px;
 height: 120px;
 margin-bottom: 30px;
-}
+} */
 
-.features-icon {
+/* .features-icon {
 margin: 25px 100px;
-}
+} */
 
 .features-title {
 margin-bottom: 10px;
