--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ color: var(--accent-color);
 .link-current {
     display: block;
     padding-top: 32px;
-    /* padding-bottom: 32px; */
+    padding-bottom: 32px;
 
     color: currentColor;
     color: var(--accent-color);
@@ -167,17 +167,6 @@ color: var(--accent-color);
     font-size: 14px;
     line-height: 1.14;
     text-decoration: none;
-}
-
-.link-current:after {
-    content: "";
-    display: block;
-    min-width: 48px;
-    height: 4px;
-    border-radius: 4px;
-    background-color: var(--accent-color);
-    margin-top: 28px;
-    background-position: bottom;
 }
 
 /* Авторизація */
