--- a/css/style.css
+++ b/css/style.css
@@ -136,18 +136,18 @@ margin-right: auto;
 }
 
 .nav-link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+display: block;
+padding-top: 32px;
+padding-bottom: 32px;
 
-    color: currentColor;
-    color: var(--title-text-color);
+color: currentColor;
+color: var(--title-text-color);
 
-    letter-spacing: 0.02em;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    text-decoration: none;
+letter-spacing: 0.02em;
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+text-decoration: none;
 }
 .site-nav .nav-link:hover, 
 .site-nav .nav-link:focus {
@@ -172,13 +172,17 @@ text-decoration: none;
 /* Авторизація */
 .auth-nav {
 display: flex;
+justify-content: center;
 }
 
 .auth-link-mail {
-display: block;
-margin-right: 50px;
+display: flex;
+align-items: center;
+justify-content: center;
+
 padding-top: 32px;
 padding-bottom: 32px;
+margin-right: 30px;
 
 color: var(--primary-text-color);
 
@@ -189,26 +193,31 @@ line-height: 1.14;
 text-decoration: none;
 }
 
-.envelope {
-display: inline-block;
-width: 16px;
-height: 12px;
-margin-right: 10px;
-}
-
 .mail-icon {
+margin-right: 10px;
 width: 16px;
 fill: currentColor;
 }
 
-.smartphone {
-display: inline-block;
-width: 10px;
-height: 16px;
-margin-right: 10px;
+.auth-link-tel {
+display: flex;
+align-items: center;
+justify-content: center;
+
+padding-top: 32px;
+padding-bottom: 32px;
+
+color: var(--primary-text-color);
+    
+letter-spacing: 0.02em;
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+text-decoration: none;
 }
 
 .tel-icon {
+margin-right: 10px;
 width: 10px;
 fill: currentColor;
 }
@@ -219,20 +228,6 @@ color: var(--accent-color);
 fill: var(--accent-color);
 }
 
-.auth-link-tel {
-display: block;
-padding-top: 32px;
-padding-bottom: 32px;
-
-color: currentColor;
-color: var(--primary-text-color);
-    
-letter-spacing: 0.02em;
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-text-decoration: none;
-}
 .auth-link-tel:hover,
 .auth-link-tel:focus {
 color: var(--accent-color);
