правка box-name

--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,8 @@ border-radius: 0px 0px 4px 4px;
 width: 270px;
 padding-top: 30px;
 padding-bottom: 30px;
+padding-left: 10px;
+padding-right: 10px;
 text-align: center;
 }
 
